<resources>
    <string name="app_name">SPI</string>
    <string name="app_title">SPI 지능형지중선로표시기</string>
    <string name="app_title_alt">SPI %1$s %2$s</string>
    <string name="btn_find_spi">주변관로\n정보조회</string>
    <string name="btn_current_spi">현재관로\n정보조회</string>
    <string name="nav_close">닫\u0020\u0020\u0020기</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="toast_error_location">위치 정보를 불러오지 못했습니다.\n잠시후에 다시 시도해주세요.</string>
    <string name="map_mode_basic">일반</string>
    <string name="map_mode_hybrid">위성</string>
    <string name="nav_title">SPI(Smart Pipe Indicator)</string>
    <string name="nav_version_name">버전 %1$s %2$s</string>
    <string name="nav_email">대진기술정보(주) %1$s</string>
    <string name="nav_dj_email">djspi@naver.com</string>
    <string name="nav_dj_phone">053–424–9547</string>
    <string name="nav_dj_homepage">http://djspi.kr</string>
    <string name="nav_app">어플리케이션</string>
    <string name="nav_guide">어플리케이션 정보</string>
    <string name="nav_homepage">홈페이지</string>
    <string name="nav_manual_video">사용법 보기(YouTube)</string>
    <string name="nav_settings">환경설정</string>
    <string name="nav_preference">설정</string>
    <string name="lay_main2_title">지도보기</string>
    <string name="lay_main2_sub">내 주변의 관로정보를 확인합니다.</string>
    <string name="lay_main3_title">SPI 조회ㆍ등록</string>
    <string name="lay_main3_sub">SPI를 태깅하여 관로정보를 조회하거나\n새로운 관로정보를 등록합니다.\nSPI를 태깅하시오.</string>
    <string name="toast_spi_tag">SPI를 태깅하시오.</string>
    <string name="lay_notify_debug">디버그 모드</string>
    <string name="toast_error">입력값을 확인해주세요</string>
    <string name="popup_ok">확 인</string>
    <string name="popup_cancel">취 소</string>
    <string name="popup_submit">입력완료</string>
    <string name="popup_none">입력안함</string>
    <string name="popup_next">다 음</string>
    <string name="popup_pre">이 전</string>
    <string name="popup_nfc_on">폰의 NFC 기능이 꺼져 있어\nNFC 설정창으로 이동합니다.</string>
    <string name="popup_nfc_on_sub"><![CDATA[NFC 안테나는 폰의 뒷면에 위치하고 있으나 폰마다 위치가 조금씩 틀립니다.
    안테나의 위치를 미리 파악하십시오. 폰 뒷면의 각종 카드등과 보조커버를 제거하시고 설정은
    <font color="#F24E4E"> 카드모드가 아닌 기본모드(읽기/쓰기)로 설정</font>하십시오.]]></string>
    <string name="popup_location_on">스마트폰의 GPS 기능이 꺼져 있어\nGPS 설정창으로 이동합니다.</string>
    <string name="popup_location_on_sub"><![CDATA[<font color="#000000">GPS 기능은 SPI 설치 위치를 입력하기 위하여 필요한 기능입니다.
    </font><font color="#F24E4E"> GPS 기능을 활성화 하십시오.</font>]]>
    </string>
    <string name="popup_error_comm">서버와의 통신에 실패하였습니다.\n네트워크 연결을 재확인해 주세요.</string>
    <string name="popup_error_not_spi">정품 SPI 확인에 실패하였습니다.\n다시 한번 천천히 태깅해 주세요.</string>
    <string name="popup_error_not_spi_renewal">
        <![CDATA[정품 SPI 확인에 실패하였습니다.\n공급처에 연락바랍니다(<font color="#F24E4E">코드 11</font>)]]></string>
    <string name="popup_error_offline_read_error">SPI 정보조회에 실패하였습니다.\nSPI를 다시 태깅해 주세요.</string>
    <string name="popup_error_set">SPI 정보 등록에 실패하였습니다.\nSPI를 다시 태깅해 주세요.</string>
    <string name="popup_error_supervise">관리기관 목록을 가져오지 못하였습니다. 다시 시도해주세요.</string>
    <string name="popup_power_save">시스템 절전모드 실행중에는\n일부 기능이 제한될 수 있습니다.\n절전모드를 해제해 주세요.</string>
    <string name="popup_power_save_sub">절전모드에서는 네트워크 속도가 저하되거나, 내 위치 확인이 제한될 수 있습니다.</string>
    <string name="popup_error_location">위치 정보를 불러오지 못했습니다.\n잠시후에 다시 시도해주세요.</string>
    <string name="popup_fail_location">위치 정보를 불러오지 못했습니다.\n네트워크 연결을 재확인해 주세요.</string>
    <string name="popup_error_location_count_exceed_sub">와이파이를 재시작하거나 LTE/5G 데이터 통신으로 변경 후 앱을 재실행해 주세요.</string>
    <string name="popup_error_serial_mismatch">SPI 정보 등록에 실패하였습니다.\nSPI를 재확인해 주세요.</string>
    <string name="popup_error_serial_mismatch_sub">기존에 태깅한 SPI와 다른 장치가 감지되었습니다. 올바른 SPI가 태깅되었는지 재확인해 주세요.</string>
    <string name="popup_error_unknown_path_installed">Google Play Store 에서 정식 버전을 다운로드하세요.</string>
    <string name="pipe_name_00">가스관로</string>
    <string name="pipe_name_01">상수관로</string>
    <string name="pipe_name_02">하수관로</string>
    <string name="pipe_name_03">오수관로</string>
    <string name="pipe_name_04">전기관로</string>
    <string name="pipe_name_05">통신관로</string>
    <string name="pipe_name_06">난방관로</string>
    <string name="pipe_name_07">유류관로</string>
    <string name="pipe_name_08">가로등</string>
    <string name="pipe_name_09">CCTV</string>
    <string name="pipe_name_10">광케이블</string>
    <string name="pipe_name_11">기타관로</string>
    <string name="pipe_name_12">우수관로</string>
    <string name="map_search_point">주변관로 정보조회</string>
    <string name="map_search_input">포인트를 선택하시면 상세정보가 제공됩니다.</string>
    <string name="map_search_hint">찾으시는 위치(지명)을 검색하세요.</string>
    <string name="popup_error_spi">SPI정보를 가져오지 못하였습니다. 다시 시도해주세요.</string>
    <string name="popup_error_noplace">위치(주소) 검색결과가 없습니다.</string>
    <string name="popup_error_zoom">현재 축척에서는 정보조회를\n지원하지 않습니다.</string>
    <string name="record_optional">선택입력 사항</string>
    <string name="record_optional_50">선택입력 사항 (50자 이하)</string>
    <string name="record_location">위치 입력</string>
    <string name="record_confirm">관로정보 입력완료</string>
    <string name="record_error">필수입력 항목입니다.</string>
    <string name="record_photo_ok">사진이 첨부되었습니다.</string>
    <string name="record_photo_error">사진을 불러오지 못하였습니다.</string>
    <string name="record_camera_error">카메라를 준비할 수 없습니다.</string>
    <string name="record_gallery_error">갤러리를 준비할 수 없습니다.</string>
    <string name="record_input_unit">m</string>
    <string name="record_input_0">관로종류</string>
    <string name="record_input_0_hint">지중선로의 종류 입력</string>
    <string name="record_input_1">관로형태</string>
    <string name="record_input_1_hint">지중선로의 형태 선택</string>
    <string name="record_input_2">이격거리</string>
    <string name="record_input_2_vertical">수직</string>
    <string name="record_input_2_horizontal">수평</string>
    <string name="record_input_2_hint">매설지점과의 이격거리</string>
    <string name="record_input_2_edit">거리 입력 (m)</string>
    <string name="record_input_3">매설심도</string>
    <string name="record_input_3_hint">매설심도 입력</string>
    <string name="record_input_4">관로스펙</string>
    <string name="record_input_4_hint">관로관경/관로수 등 입력</string>
    <string name="record_input_4_hint_2">%1$s 입력</string>
    <string name="record_input_5">관로재질</string>
    <string name="record_input_5_hint">관로재질 입력</string>
    <string name="record_input_6">관리기관</string>
    <string name="record_input_6_hint">관리기관명 입력</string>
    <string name="record_input_7">전화번호</string>
    <string name="record_input_7_hint">비상 연락처 입력</string>
    <string name="record_input_8">메\u0020\u0020\u0020\u0020\u0020\u0020\u0020모</string>
    <string name="record_input_8_hint">메모 입력(선택사항)</string>
    <string name="record_input_9">시공업체</string>
    <string name="record_input_9_hint">시공업체 입력(선택사항)</string>
    <string name="record_input_10">시공업체\n연\u0020\u0020락\u0020\u0020처</string>
    <string name="record_input_10_hint">시공업체 연락처 입력(선택사항)</string>
    <string name="record_input_photo">현장사진</string>
    <string name="record_input_photo_hint">사진첨부(선택사항)</string>
    <string name="record_input_photo_delete">사진이 삭제되었습니다.</string>
    <string name="popup_title_select_pipe">지중선로 종류선택</string>
    <string name="popup_title_select_shape">지중선로 형태선택</string>
    <string name="popup_title_select_position">지중선로 위치선택</string>
    <string name="popup_title_select_position_valve">제수변 위치선택</string>
    <string name="popup_title_select_direction">지중선로 방향선택</string>
    <string name="popup_title_select_direction_valve">제수변 방향선택</string>
    <string name="popup_title_select_direction_sub">지중선로의 방향을 선택해주세요.</string>
    <string name="popup_title_select_direction_sub_valve">제수변의 방향을 선택해주세요.</string>
    <string name="popup_title_select_direction_sub_elb135">굴곡지점의 관로방향과 표지판의 관로방향이 일치하도록 부착해주세요.</string>
    <string name="popup_title_input_distance">지중선로 거리입력</string>
    <string name="popup_title_input_distance_valve">제수변 거리입력</string>
    <string name="popup_title_select_supervise">관리기관 선택</string>
    <string name="popup_title_select_photo">사진 첨부</string>
    <string name="popup_error_select_position">지중선로의 위치를 선택해주세요.</string>
    <string name="popup_error_select_position_valve">제수변의 위치를 선택해주세요.</string>
    <string name="popup_error_input_distance">지중선로의 이격거리(m)를 입력해주세요.</string>
    <string name="popup_error_input_distance_valve">제수변의 이격거리(m)를 입력해주세요.</string>
    <string name="popup_camera">카메라</string>
    <string name="popup_gallery">갤러리</string>
    <string name="popup_file_viewer">파일</string>
    <string name="popup_file_viewer_title">파일을 선택하세요…</string>
    <string name="shape_name_00">직진형</string>
    <string name="shape_name_01">T분기형</string>
    <string name="shape_name_02">엘보형</string>
    <string name="shape_name_03">관말형</string>
    <string name="record_location_title">SPI 지중선로 위치설정</string>
    <string name="record_gps_sub">지도를 움직여 SPI 설치위치를 확정하시오</string>
    <string name="record_confirm_location">위치 저장</string>
    <string name="popup_title_location">SPI 설치 위치 입력</string>
    <string name="popup_survey">측량좌표 입력</string>
    <string name="popup_gps">지도에서 입력</string>
    <string name="popup_title_survey_spi">SPI 설치지점 측량좌표</string>
    <string name="popup_title_survey_pipe">관로의 측량좌표</string>
    <string name="popup_title_survey">측량좌표 입력</string>
    <string name="map_origin">원점:</string>
    <string name="map_origin_western">서부</string>
    <string name="map_origin_central">중부</string>
    <string name="map_origin_eastern">동부</string>
    <string name="map_origin_eastsea">동해</string>
    <string name="map_coord_pipe">관로의 측량좌표</string>
    <string name="map_coord_spi">SPI 설치지점의 측량좌표</string>
    <string name="map_coord_x_pipe">관로: X 좌표</string>
    <string name="map_coord_y_pipe">관로: Y 좌표</string>
    <string name="map_coord_x_spi">SPI: X 좌표</string>
    <string name="map_coord_y_spi">SPI: Y 좌표</string>
    <string name="map_input_error">값을 입력하시오</string>
    <string name="map_coord_error">좌표값 오류</string>
    <string name="marker_caption_location_spi">SPI 설치지점</string>
    <string name="marker_caption_location_invalid">유효하지 않은 좌표입니다</string>
    <string name="marker_caption_sub_location_invalid">좌표값을 확인 후 재입력하십시오</string>
    <string name="marker_caption_network_invalid">주소를 가져올 수 없습니다</string>
    <string name="marker_caption_sub_network_invalid">인터넷 연결을 재확인하십시오</string>
    <string name="popup_survey_origin">원점을 선택하세요</string>
    <string name="write_instruction"><![CDATA[SPI의 상면을 스마트폰 뒷면의 NFC 안테나 위치에 접촉
    하시고 <font color="#1c73e8">"정보를 정상적으로 기록하였습니다"</font> 라는 팝업창이 나타날 때까지 기다려 주십시오.]]></string>
    <string name="popup_read_only"><![CDATA[SPI에 정보를 저장하면 새로 쓰거나 지울 수 없습니다. 저장할 내용을 충분히 확인하신 후 기록하십시오.
    <br><br>서버와 SPI에 정보를 저장하기 위하여는 약간의 시간이 소요됩니다.
    <font color="#f24e4e"> "정보를 정상적으로 기록하였습니다"</font> 라는 팝업창이 표시되기 전에 <font color="#1c73e8">SPI를 스마트폰과 분리하지 마십시오.</font>]]></string>
    <string name="popup_write_success">정보를 정상적으로 기록하였습니다</string>
    <string name="popup_write_retry">SPI를 다시 한번 천천히 태깅해주세요.</string>
    <string name="progressbar_progress">서버에 정보를 등록 중입니다…</string>
    <string name="pipe_info">관로정보</string>
    <string name="pipe_section">단면도</string>
    <string name="pipe_plane">평면도</string>
    <string name="pipe_confirm">정보저장</string>
    <string name="pipe_plane_survey_title">관로의 측량좌표</string>
    <string name="pipe_plane_survey_spi_title">SPI 설치지점의 측량좌표</string>
    <string name="pipe_plane_survey_origin">원점</string>
    <string name="pipe_plane_survey_x">X (m)</string>
    <string name="pipe_plane_survey_y">Y (m)</string>
    <string name="nfc_info_read_contents"><![CDATA[본 관로는 <font color="#F24E4E">%1$s</font>
     로서 <br><font color="#F24E4E">%2$s</font>의 <font color="#F24E4E">%3$s %4$s</font><font color="#F24E4E"> %5$s</font>
      관로가 SPI로부터<br> <font color="#F24E4E">%6$s %7$s</font> 이격되어 지표면으로부터 <font color="#F24E4E">%8$s m</font>
       깊이에 매설되어 있습니다. 굴착 전 관리기관에 확인 후 굴착하여 주시기 바랍니다.]]></string>
</resources>