<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_apptitle"
        android:title="@string/nav_app">
        <menu>
            <item
                android:id="@+id/nav_guide"
                android:title="@string/nav_guide" />
            <item
                android:id="@+id/nav_manual_video"
                android:title="@string/nav_manual_video" />
            <item
                android:id="@+id/nav_homepage"
                android:title="@string/nav_homepage" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_settingtitle"
        android:title="@string/nav_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/nav_preference" />
        </menu>
    </item>
</menu>
