<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NaverMapActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ContentDescription">

        <include
            android:id="@+id/lay_appbar"
            layout="@layout/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:id="@+id/map_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/nmap_searchView"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:alpha="0.9"
                android:background="#FFFFFF"
                android:focusable="false"
                app:closeIcon="@drawable/ic_search_close"
                app:defaultQueryHint="@string/map_search_hint"
                app:goIcon="@drawable/ic_search"
                app:iconifiedByDefault="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:queryBackground="@null"
                app:searchHintIcon="@null"
                app:searchIcon="@drawable/addr2"
                app:submitBackground="@null" />

            <ListView
                android:id="@+id/nmap_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_anchor="@id/nmap_searchView"
                app:layout_anchorGravity="bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nmap_searchView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/nmap_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingBottom="7.5dp"
            app:behavior_hideable="false"
            app:behavior_peekHeight="45dp"
            app:layout_behavior="@string/bottom_sheet_behavior"
            tools:ignore="MissingPrefix">

            <TextView
                android:id="@+id/nmap_bottom_sheet_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/map_search_point"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="5dp"
                tools:ignore="SmallSp">

                <TableRow
                    style="@style/Spi.TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="23dp">

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_01"
                        android:text="@string/pipe_name_00" />

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_02"
                        android:text="@string/pipe_name_01" />

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_03"
                        android:text="@string/pipe_name_02" />

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_04"
                        android:text="@string/pipe_name_03" />

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_12"
                        android:text="@string/pipe_name_12" />

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_05"
                        android:text="@string/pipe_name_04" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    tools:ignore="DuplicateIds">

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_06"
                        android:text="@string/pipe_name_05" />

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_07"
                        android:text="@string/pipe_name_06" />

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_08"
                        android:text="@string/pipe_name_07" />

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_09"
                        android:text="@string/pipe_name_08" />

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_10"
                        android:text="@string/pipe_name_09" />

                    <TextView
                        style="@style/Spi.TableRow.Items"
                        android:drawableStart="@drawable/cir_11"
                        android:text="@string/pipe_name_10" />
                </TableRow>
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include
        android:id="@+id/navView"
        layout="@layout/navigation_view" />
</androidx.drawerlayout.widget.DrawerLayout>